--- a/public/styles/solo-mode.css
+++ b/public/styles/solo-mode.css
@@ -190,7 +190,7 @@
   justify-content: center;
   padding: 12px 24px;
   border-radius: 50px;
-  font-family: 'Satoshi-Medium', sans-serif;
+  font-family: "mocraRegular", sans-serif;
   font-weight: 600;
   cursor: pointer;
 }
