--- a/public/styles/game.css
+++ b/public/styles/game.css
@@ -592,6 +592,7 @@ h1, h2, h3 {
 
 #playerQuestionContext{
   width: 90%;
+  overflow: visible !important;
 }
 
 .answer-panel::before {
@@ -1158,15 +1159,16 @@ h1, h2, h3 {
 
 .desktop-image-zone {
   width: 100%;
-  /* height: 30vh; */
+  height: 80vh;
   display: flex;
   align-items: center;
   /* justify-content: center; */
   /* background: var(--couleur-grisBleuClair); */
   border-radius: 12px;
   margin-bottom: 1.5rem;
-  overflow: hidden;
+  /* overflow: hidden; */
   flex-direction: column;
+  justify-content: flex-end;
 }
 
 .desktop-image-zone.empty {
@@ -1239,15 +1241,16 @@ h1, h2, h3 {
 
   .desktop-layout-container {
     flex-direction: row;
-    height: 100vh;
-    overflow: hidden;
+    height: 90vh;
+    /* overflow: hidden; */
   }
 
   .desktop-image-zone {
     width: 50%;
-    height: 80%;
+    height: 85%;
     margin-bottom: 0;
     border-radius: 0;
+    
   }
   
   .desktop-image-zone.empty {
