--- a/public/styles/solo-mode.css
+++ b/public/styles/solo-mode.css
@@ -31,30 +31,32 @@
   height: 30vh;
   margin-bottom: 1.5rem;
   border-radius: 12px;
+  object-position: center bottom;
   overflow: hidden;
   box-shadow: var(--effet-miniDropShadow);
 }
 
 #soloContextImage {
   width: 100%;
-  height: 80%;
+  /* height: 80%; */
   object-fit: contain;
-  object-position: center;
+  object-position: center bottom;
   transition: opacity 0.3s ease;
 }
 
 /* === CONTEXTE DE QUESTION SOLO === */
 #soloQuestionContext {
-  padding: 1rem;
+  padding: 1rem !important;
   /* background: var(--couleur-beigeNorm); */
   border-radius: 8px;
-  margin-bottom: 1rem;
+  margin-bottom: 1rem !important;
   font-family: 'Satoshi-Regular', sans-serif;
   color: var(--couleur-noirVolcan);
-  font-size: larger;
+  font-size: 1rem;
   font-weight: bold;
   /* box-shadow: var(--effet-innerShadow); */
   width: 90%;
+  overflow: visible !important;
 
 }
 
@@ -263,7 +265,8 @@
 
 /* === ÉCRAN DE FIN MODE SOLO === */
 #solo-end-screen {
-  overflow-y: scroll;
+  overflow-y: auto; /* auto au lieu de scroll */
+  max-height: 100vh; /* IMPORTANT : définis une hauteur max */
   background: var(--couleur-blancSite);
   background-image: 
     linear-gradient(var(--couleur-secondary-light) 1px, transparent 1px),
@@ -273,7 +276,7 @@
 
 .solo-end-card {
   max-width: 800px;
-  margin: 0 auto;
+  margin: 0 auto;;
   text-align: center;
   padding: 2rem;
 }
